# reliable-serial-rtic

doc/: FT2232H Serial.md  Real-time Transfer.md  USB on WSL.md  git fetch.md
reliable-serial/: Cargo.toml  Embed.toml  README.md  pw2p1-reference-2025.r1.elf
reliable-serial/.cargo/: config.toml
reliable-serial/examples/: commands_template.rs  rtic_uart_rx_tx.rs  smartled.rs  uart_rx_tx.rs
reliable-serial/src/: main.rs  serial.rs
tester/: Cargo.toml  README.md
tester/examples/: send_zero.rs  some_commands.rs
tester/src/: exchange.rs  lib.rs  serial.rs
the-protocol/: Cargo.toml
the-protocol-serde/: Cargo.toml
the-protocol-serde/src/: codec.rs  lib.rs  serde.rs
the-protocol/src/: cmd.rs  date_time.rs  lib.rs  response.rs
